--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,7 @@ body {
 
 .header-description {
     color: #CFCFCF;
+    font-size: 10px;
     margin: 4px auto;
     text-align: center;
     max-width: 384px;
