--- a/assets/style.css
+++ b/assets/style.css
@@ -35,39 +35,31 @@ body {
 .wrapper {
     margin-right: auto;
     margin-left: auto;
-    max-width: 1024px;
+    max-width: 90%;
     padding-right: 10px;
     padding-left: 10px;
     margin-top: 32px;
-}
-
-.card {
-    margin-bottom: 24px;
-    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
-}
-
-.menu {
-    height: 112px;
-    width: 912px;
     display: flex;
-    justify-content: space-evenly;
-    padding-top: 24px;
-    margin: -80px auto 0 auto;
-    background-color: #8dd457;
-    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
+
+.card, .summary-table {
+    width: 100%; /* Both card and table take full width */
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+    margin-bottom: 24px;
+}
+
+.summary-table {
+    font-size: 20px;
+    color: #155d21; /* Change font color to green */
+    width: 100%; /* Take full width on all screens */
+}
+
 
 .Select-control {
-    width: 256px;
+    width: 100%; /* Take full width on mobile */
     height: 48px;
-}
-
-.Select--single > .Select-control .Select-value, .Select-placeholder {
-    line-height: 48px;
-}
-
-.Select--multi .Select-value-label {
-    line-height: 32px;
 }
 
 .menu-title {
@@ -76,17 +68,41 @@ body {
     color: #9a0707;
 }
 
-.dropdown{
+.dropdown {
     display: flex;
-    width: 200px;
+    width: 100%; /* Take full width on mobile */
     height: 50px;
     justify-content: space-evenly;
-    color : #155d21 ;
+    color: #155d21;
+}
+.menu {
+    height: auto; /* Adjust height to auto for mobile */
+    width: 100%; /* Take full width on mobile */
+    display: flex;
+    flex-direction: column; /* Stack items vertically on mobile */
+    justify-content: space-evenly;
+    padding-top: 24px;
+    margin: -50px auto 0 auto;
+    background-color: #8dd457;
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
 }
 
-.summary-table{
-    font-size: 20px;
-    color: #155d21;
-    margin-bottom: 24px;
-    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+@media screen and (min-width: 600px) {
+    /* Add any additional styles for larger screens here */
+    .card, .summary-table {
+        width: calc(50% - 12px);
+    }
+
+    .menu {
+        width: 912px;
+        flex-direction: row; /* Arrange items side by side on larger screens */
+    }
+
+    .Select-control {
+        width: 256px;
+    }
+
+    .dropdown {
+        width: 200px;
+    }
 }
